Attempt to inject add-opens into all javadoc builds