@@ -177,6 +177,14 @@
                                     <goal>javadoc-no-fork</goal>
                                     <goal>aggregate-no-fork</goal>
                                 </goals>
+                                <configuration>
+                                    <!-- add-reads is an experimental javadoc option -->
+                                    <additionalOptions>
+                                        --limit-modules kivakit.web.wicket
+                                        --add-reads org.apiguardian.api=ALL-UNNAMED
+                                    </additionalOptions>                        
+
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
